--- a/front/src/app/form-cadastro/form-cadastro.component.html
+++ b/front/src/app/form-cadastro/form-cadastro.component.html
@@ -8,16 +8,20 @@
       /><br />
     </div>
     <h2 class="text-center mb-4 text-primary mt-5">Cadastre-se!</h2>
-    <form>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()" #formDir="ngForm">
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Nome</label>
         <input
           type="cpf"
           class="form-control border border-primary"
           id="cpf"
+          name="nome"
           formControlName="nome"
           aria-describedby="emailHelp"
         />
+        <div *ngIf="nome.invalid && formDir.submitted" class="validation-error">
+          <p *ngIf="nome.errors?.['required']">Nome é obrigatório</p>
+        </div>
       </div>
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">CPF</label>
@@ -27,26 +31,43 @@
           id="cpf"
           aria-describedby="emailHelp"
         />
+        <div *ngIf="cpf.invalid && formDir.submitted" class="validation-error">
+          <p *ngIf="cpf.errors?.['required']">Cpf é obrigatório</p>
+        </div>
       </div>
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">E-mail</label>
         <input
-          type="cpf"
+          type="email"
           class="form-control border border-primary"
-          id="cpf"
+          id="email"
+          name="email"
           formControlName="email"
           aria-describedby="emailHelp"
         />
+        <div
+          *ngIf="email.invalid && formDir.submitted"
+          class="validation-error"
+        >
+          <p *ngIf="email.errors?.['required']">Email é obrigatório</p>
+        </div>
       </div>
 
       <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Senha</label>
         <input
           type="senha"
+          name="senha"
           class="form-control border border-primary"
           formControlName="senha"
           id="senha"
         />
+        <div
+          *ngIf="senha.invalid && formDir.submitted"
+          class="validation-error"
+        >
+          <p *ngIf="senha.errors?.['required']">Email é obrigatório</p>
+        </div>
       </div>
       <p class="small">
         <a class="text-primary" href="forget-password.html"
