--- a/front/src/app/cadastro-agente/cadastro-agente.component.css
+++ b/front/src/app/cadastro-agente/cadastro-agente.component.css
@@ -1,5 +1,33 @@
 .rounded {
-  width: 200px;
-  height: 200px;
+  display: block;
+  width: 100%;
   border-radius: 50%;
 }
+.form {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 100%;
+  width: 960px;
+  margin: 0 auto;
+}
+
+textarea:focus, input:focus, select:focus {
+  box-shadow: 0 0 0 0;
+  border: 0 none;
+  outline: 0;
+}
+
+.form-check-input {
+  width: 20px;
+  height: 20px;
+  border-radius: 20px;
+}
+
+.validation-error p {
+  color: #dc3545;
+  margin-top: 0.2em;
+  border-left: 2px solid #dc3545;
+  padding-left: 0.3em;
+}
+
+
