--- a/front/src/app/login/login.component.html
+++ b/front/src/app/login/login.component.html
@@ -4,25 +4,34 @@
       <img src="../../assets/img/login.jpg" class="rounded" alt="..." /><br />
     </div>
     <h2 class="text-center mb-4 text-primary mt-5">Login</h2>
-    <form>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()" #formDir="ngForm">
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">CPF</label>
         <input
           type="cpf"
           class="form-control border border-primary"
           id="cpf"
+          name="cpf"
           formControlName="cpf"
           aria-describedby="emailHelp"
         />
+        <div *ngIf="cpf.invalid && formDir.submitted" class="validation-error">
+          <p *ngIf="cpf.errors?.['required']">CPF é obrigatório</p>
+        </div>
       </div>
       <div class="mb-3">
         <label for="exampleInputPassword1" class="form-label">Senha</label>
         <input
-          type="senha"
+          type="password"
           class="form-control border border-primary"
           id="senha"
+          name="senha"
           formControlName="senha"
         />
+      </div>
+      <div *ngIf="senha.invalid && formDir.submitted" class="validation-error">
+        <p *ngIf="senha.errors?.['required']">Senha é obrigatório</p>
+        <p *ngIf="senha.errors?.['minLength']">Senha é obrigatório</p>
       </div>
       <p class="small">
         <a class="text-primary" href="forget-password.html"
