add android platform

--- a/front/src/app/dashboard/dashboard.component.html
+++ b/front/src/app/dashboard/dashboard.component.html
@@ -9,11 +9,11 @@
     <table class="table table-striped">
       <thead>
         <tr>
-          <th scope="col">#</th>
-          <th scope="col">Nome</th>
-          <th scope="col">E-mail</th>
-          <th scope="col">Cpf</th>
-          <th scope="col">Ação</th>
+          <th scope="col" class="text-center">#</th>
+          <th scope="col" class="text-center">Nome</th>
+          <th scope="col" class="text-center">E-mail</th>
+          <th scope="col" class="text-center">Cpf</th>
+          <th scope="col" class="text-center">Ação</th>
         </tr>
       </thead>
       <tbody>
@@ -22,11 +22,12 @@
           <td></td>
           <td></td>
           <td></td>
-          <td>
+          <td class="text-center">
             <div class="row d-inline-flex">
               <div class="form-inline">
-                <button class="btn btn-primary mr-2">Editar</button>
-                <button class="btn btn-danger">Excluir</button>
+                <button class="btn btn-primary mr-1">Editar</button>
+                <button class="btn btn-danger mr-1">Excluir</button>
+                <button class="btn btn-danger mr-1">Visualizar</button>
               </div>
             </div>
           </td>
