--- a/front/src/app/relatorio/relatorio.component.html
+++ b/front/src/app/relatorio/relatorio.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-  <table class="table table-striped">
-    <thead class="thead-dark">
+  <table class="table table-striped card p-5">
+    <thead class="mx-auto">
       <tr>
-        <th scope="col">Criadouro</th>
+        <th scope="col text-light">Criadouro</th>
         <th scope="col text-center">
           Registro de Atividades de Prevenção ao Aedes aegypti
         </th>
@@ -14,7 +14,7 @@
     </thead>
   </table>
 
-  <div class="container mb-5 mt-5">
+  <div class="container mb-5 mt-5 card p-5">
     <div class="row">
       <div class="form-group row">
         <label for="inputPassword" class="col-md-4 col-form-label">DATA</label>
@@ -50,47 +50,34 @@
       </div>
     </div>
   </div>
-
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th scope="col">L/Q - n casa</th>
-        <th scope="col">Ativ.</th>
-        <th scope="col">Criadouro</th>
-        <th scope="col">Larvas</th>
-        <th scope="col">Aviso</th>
-        <th scope="col">Responsável/Função</th>
-        <th scope="col">Observação</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="table-responsive-md">
+    <table class="table table-striped card p-5">
+      <thead class="mx-auto mb-5">
+        <tr>
+          <th scope="col" colspan="5">L/Q - n casa</th>
+          <th scope="col">Ativ.</th>
+          <th scope="col">Criadouro</th>
+          <th scope="col">Larvas</th>
+          <th scope="col">Aviso</th>
+          <th scope="col">Responsável/Função</th>
+          <th scope="col">Observação</th>
+        </tr>
+      </thead>
+      <tbody class="mx-auto">
+        <tr>
+          <th scope="row">1</th>
+          <td colspan="2">Rua Alagoas - 250, casa</td>
+          <td colspan="2">Sim</td>
+          <td colspan="2">Vaso de plantas</td>
+          <td colspan="2">Sim</td>
+          <td colspan="2">S</td>
+          <td colspan="2">João Paulo Batista / Agente</td>
+          <td>
+            Utilizar o produto para mata larvas, e seguir instruções de limpeza
+            passadas pelo agente
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
