--- a/front/src/app/login/login.component.css
+++ b/front/src/app/login/login.component.css
@@ -2,3 +2,10 @@
   width: 150px;
   height: 150px;
 }
+
+.validation-error p {
+  color: #dc3545;
+  margin-top: 0.2em;
+  border-left: 2px solid #dc3545;
+  padding-left: 0.3em;
+}
