--- a/front/src/app/login/login.component.html
+++ b/front/src/app/login/login.component.html
@@ -1,12 +1,16 @@
-<div class="vh-100 d-flex justify-content-center align-items-center mt-5 p-5">
-  <div class="col-md-5 p-5 shadow-sm border rounded-5 border-primary bg-white">
+<div class="vh-100 d-flex justify-content-center align-items-center">
+  <div
+    class="col-sm-10 col-md-6 col-lg-4 p-3 shadow-sm border rounded-5 border-primary bg-white"
+  >
     <div class="text-center">
       <img src="../../assets/img/login.jpg" class="rounded" alt="..." /><br />
     </div>
     <h2 class="text-center mb-4 text-primary mt-5">Login</h2>
     <form [formGroup]="form" (ngSubmit)="onSubmit()" #formDir="ngForm">
       <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">CPF</label>
+        <label for="exampleInputEmail1" class="form-label text-primary"
+          >CPF</label
+        >
         <input
           type="cpf"
           class="form-control border border-primary"
@@ -20,7 +24,9 @@
         </div>
       </div>
       <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Senha</label>
+        <label for="exampleInputPassword1" class="form-label text-primary"
+          >Senha</label
+        >
         <input
           type="password"
           class="form-control border border-primary"
