--- a/front/src/app/dashboard/dashboard.component.html
+++ b/front/src/app/dashboard/dashboard.component.html
@@ -1,33 +1,37 @@
-<div class="container mt-5 card p-5">
-  <div class="row">
-    <div class="col-md-2">
-      <button class="btn btn-success">Cadastrar Usuário</button>
-    </div>
+<div class="container-fluid">
+  <nav class="navbar navbar-dark bg-dark">
+    <!-- Navbar content -->
+  </nav>
+</div>
+
+<div class="container p-3">
+  <div class="text-center my-5">
+    <h2 class="text-primary bg-white p-5">RESULTADO DAS COLETAS</h2>
   </div>
 
-  <div class="d-flex flex-row-reverse mb-5 mt-5">
-    <table class="table table-striped">
+  <div class="table-responsive">
+    <table class="table table-hover">
       <thead>
         <tr>
           <th scope="col" class="text-center">#</th>
-          <th scope="col" class="text-center">Nome</th>
-          <th scope="col" class="text-center">E-mail</th>
-          <th scope="col" class="text-center">Cpf</th>
-          <th scope="col" class="text-center">Ação</th>
+          <th scope="col" class="text-center">NOME</th>
+          <th scope="col" class="text-center">E-MAIL</th>
+          <th scope="col" class="text-center">CPF</th>
+          <th scope="col" class="text-center">Visualizar Relatório</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <th scope="row">1</th>
-          <td></td>
-          <td></td>
-          <td></td>
+          <th class="text-center" scope="row">1</th>
+          <td class="text-center">PEDRO R. FISCHER FILHO</td>
+          <td class="text-center">PEDRO.FISCHER22@GMAIL.COM</td>
+          <td class="text-center">444.222.666-55</td>
           <td class="text-center">
             <div class="row d-inline-flex">
               <div class="form-inline">
-                <button class="btn btn-primary mr-1">Editar</button>
-                <button class="btn btn-danger mr-1">Excluir</button>
-                <button class="btn btn-danger mr-1">Visualizar</button>
+                <a href="#" class="btn btn-outline-secondary btn-sm"
+                  >Relatório
+                </a>
               </div>
             </div>
           </td>
