--- a/front/src/app/login/login.component.css
+++ b/front/src/app/login/login.component.css
@@ -1,6 +1,13 @@
 .rounded {
-  width: 150px;
-  height: 150px;
+  max-width: 100%;
+  width: 400px;
+  height: 400px;
+}
+
+.border {
+  background: 2px solid  #007bff !important;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px #dedede;
 }
 
 .validation-error p {
