incluindo header e footer

--- a/front/src/app/dashboard/dashboard.component.html
+++ b/front/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,13 @@
-<div class="container p-3 my-5 py-5">
-  <mat-card>
-    <h2 class="text-primary text-center bg-white p-5 border border-primary">
+<div class="container p-3 my-2">
+  <mat-card class="mb-5">
+    <h2
+      class="text-primary text-center bg-white p-5 border border-primary boder"
+    >
       RESULTADO DAS COLETAS
     </h2>
 
     <mat-card-title-group
-      class="border border-primary my-3 p-3"
+      class="border border-primary my-3 p-3 boder"
       *ngFor="let user of users"
     >
       <mat-card-title>{{ user.nome }}</mat-card-title>
