--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -8,4 +8,30 @@
 
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background: #007bff !important;}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body, h1, h2, ul, li, a{
+  margin: 0px;
+  padding: 0px;
+}
+
+body {
+  font-family: "Nunito", Helvetica, sans-serif;
+  color: #222222;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
