--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header></app-header>
-<app-dashboard></app-dashboard>
-<app-footer></app-footer>
+<app-header *ngIf="showMenu"></app-header>
+<router-outlet></router-outlet>
+<app-footer *ngIf="showMenu"></app-footer>
