--- a/front/src/app/coleta/coleta.component.css
+++ b/front/src/app/coleta/coleta.component.css
@@ -1,33 +1,17 @@
 .rounded {
   display: block;
+  width: 150px;
+  border-radius: 150px;
+}
+.full-width-field {
   width: 100%;
-  border-radius: 50%;
+  padding: 0 5px;
 }
-.form {
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 100%;
-  width: 960px;
-  margin: 0 auto;
+.outline-none {
+  outline: none;
 }
-
-textarea:focus, input:focus, select:focus {
-  box-shadow: 0 0 0 0;
-  border: 0 none;
-  outline: 0;
+.full-btn{
+  width: 100%!important;
+  min-width: unset!important;
+  padding: 0 5px;
 }
-
-.form-check-input {
-  width: 20px;
-  height: 20px;
-  border-radius: 20px;
-}
-
-.validation-error p {
-  color: #dc3545;
-  margin-top: 0.2em;
-  border-left: 2px solid #dc3545;
-  padding-left: 0.3em;
-}
-
-
