--- a/front/src/app/dashboard/dashboard.component.css
+++ b/front/src/app/dashboard/dashboard.component.css
@@ -1,10 +1,16 @@
 .img {
   max-width: 100%;
-  display: block;
-  width: 250px;
-  height: 250px;
+  width: 150px;
+  height: 150px;
 }
 
-.boder {
-  border-radius: 4px;
+.color {
+  color: #3f51b5;
+}
+
+.background {
+  border-radius: 5px;
+}
+.outline-none {
+  outline: none;
 }
