--- a/front/src/app/login/login.component.html
+++ b/front/src/app/login/login.component.html
@@ -1,54 +1,41 @@
-<section class="container">
-  <div class="row justify-content-center">
-    <div class="col-lg-6 col-md-12 mt-5 text-center p-5">
-      <img src="../../assets/img/login.jpg" class="rounded" alt="Login" />
-      <h2 class="text-primary mt-3">Login</h2>
+<section class="container h-50">
+  <div class="row h-100 justify-content-center align-items-center">
+    <div class="col-lg-6 col-md-6 text-center">
+      <div class="col-sm-12 mt-1">
+        <img
+          src="../../assets/img/login.jpg"
+          class="rounded text-center"
+          alt="Login"
+        />
+      </div>
+      <h2 class="text-primary mt-3 display-6">Login</h2>
       <form
         [formGroup]="form"
-        (ngSubmit)="onSubmit()"
+        (ngSubmit)="onLogin()"
         #formDir="ngForm"
         class="border-primary mt-3"
       >
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label text-primary"
-            >CPF</label
-          >
+        <mat-form-field class="full-width-field" appearance="fill">
+          <mat-label>CPF</mat-label>
+          <input matInput placeholder="CPF" formControlName="cpf" />
+        </mat-form-field>
+
+        <mat-form-field class="full-width-field" appearance="fill">
+          <mat-label>Senha</mat-label>
           <input
-            type="cpf"
-            class="form-control border border-primary"
-            id="cpf"
-            name="cpf"
-            formControlName="cpf"
-            aria-describedby="emailHelp"
-          />
-          <div
-            *ngIf="cpf.invalid && formDir.submitted"
-            class="validation-error"
-          >
-            <p *ngIf="cpf.errors?.['required']">CPF é obrigatório</p>
-          </div>
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label text-primary"
-            >Senha</label
-          >
-          <input
+            matInput
             type="password"
-            class="form-control border border-primary"
-            id="senha"
-            name="senha"
+            placeholder="senha"
             formControlName="senha"
           />
-          <div
-            *ngIf="senha.invalid && formDir.submitted"
-            class="validation-error"
-          >
-            <p *ngIf="senha.errors?.['required']">Senha é obrigatório</p>
-          </div>
-        </div>
-        <div class="d-grid">
-          <button class="btn btn-success btn-block" type="submit">Logar</button>
-        </div>
+        </mat-form-field>
+
+        <button
+          mat-raised-button
+          class="full-btn outline-none bg-success text-white"
+        >
+          Login
+        </button>
       </form>
     </div>
   </div>
