--- a/front/src/app/template/footer/footer.component.css
+++ b/front/src/app/template/footer/footer.component.css
@@ -1,10 +1,19 @@
 .footer {
   position: fixed;
   bottom:  0;
-  background: #007fff;
-  justify-content: center;
+  padding-left: 50px;
+  padding-right: 50px;
+  background: #3f51b5;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.footer span {
-  color: #eee;
+.outline-none {
+  outline: none;
 }
+
+.icon-footer {
+  color: forestgreen;
+}
+
