copy to android studio

--- a/front/src/app/coleta/coleta.component.html
+++ b/front/src/app/coleta/coleta.component.html
@@ -9,7 +9,7 @@
       (ngSubmit)="onSubmit()"
       #formDir="ngForm"
     >
-      <mat-card class="mat-elevation-z0">
+      <mat-card class="mat-elevation-z0 mb-5">
         <div class="mb-3">
           <mat-form-field class="full-width-field" appearance="fill">
             <mat-label>Nome Entrevistado</mat-label>
