--- a/front/src/app/dashboard/dashboard.component.html
+++ b/front/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="container p-2">
-  <mat-card class="mat-elevation-z0">
+  <mat-card class="mat-elevation-z0 mb-5">
     <h6 class="text-muted text-center p-2 display-6">RESULTADO DAS COLETAS</h6>
 
     <mat-card-title-group
