--- a/front/src/app/dashboard/dashboard.component.html
+++ b/front/src/app/dashboard/dashboard.component.html
@@ -4,13 +4,18 @@
 
     <mat-card-title-group
       class="my-3 p-3 background mat-elevation-z4"
-      *ngFor="let user of users"
+      *ngFor="let agente of listAgente"
     >
-      <mat-card-title class="color">{{ user.nome }}</mat-card-title>
+      <mat-card-title class="color">{{ agente.nome }}</mat-card-title>
       <mat-card-subtitle class="text-muted">{{
-        user.funcao
+        agente.funcao
       }}</mat-card-subtitle>
-      <button mat-button color="primary" class="outline-none">
+      <button
+        mat-button
+        color="primary"
+        class="outline-none"
+        (click)="download(agente)"
+      >
         <mat-icon>cloud_download</mat-icon>
       </button>
     </mat-card-title-group>
