--- a/front/src/app/login/login.component.html
+++ b/front/src/app/login/login.component.html
@@ -30,12 +30,18 @@
           />
         </mat-form-field>
 
-        <button
-          mat-raised-button
-          class="full-btn outline-none bg-success text-white"
-        >
-          Login
-        </button>
+        <div class="example-button-row">
+          <button
+            mat-raised-button
+            class="full-btn outline-none bg-success text-white"
+            color="primary"
+          >
+            Login
+          </button>
+          <a class="mt-2" mat-button color="primary" [routerLink]="['cadastro']"
+            >Cadastrar</a
+          >
+        </div>
       </form>
     </div>
   </div>
